<resources>
    <string name="app_name">BottomNavigationBar</string>

    <string name="pass">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="reg">Create an Account</string>
    <string name="name">Name</string>
    <string name="registerbbtn">Register</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="thish">home</string>
    <string name="forPass">Forgot Password?</string>
    <string name="recoveryEmail">Please enter the email account relate to this account.</string>
    <string name="send">send</string>
    <string name="recoveryMessage">An email has been sent with your to recover your password!!!</string>
    <string name="resent">Resent</string>
    <string name="returnlogin">Return to Login</string>
    <string name="remember">Remember Me</string>
    <string name="logout">Logout</string>

    <string-array name="spinner">
        <item>Monthly</item>
        <item>Weekly</item>
        <item>Yearly</item>
        <item>Bi-Monthly</item>
        <item>Bi-Weekly</item>
    </string-array>

    <string-array name="categories">
        <item>Rent</item>
        <item>Services</item>
        <item>Food</item>
        <item>Entertainment</item>
        <item>Clothes</item>
        <item>Other</item>
    </string-array>

    <string-array name="Months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="Dates">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string name="newPasswordMessage">Enter your new password</string>
    <string name="newPassword">New Password</string>
    <string name="ConfirmNP">Confirm Password</string>
    <string name="Save">SAVE</string>
    <string name="addbill">Add Bill +</string>
    <string name="Amount">Amount</string>
    <string name="CalculateBtn">Calculate</string>
    <string name="passRequirements">* Password must contain a minimum of 6 characters!</string>
    <string name="value">$0.0</string>
    <string name="rent">Rent</string>
    <string name="CurrentPassword">Current Password</string>
    <string name="money">$0.00</string>

</resources>
