<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3"
    tools:context=".RergistrationAndLogin.Register">

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="308dp"
        android:layout_height="48dp"
        android:autofillHints="@string/email"
        android:background="@drawable/box"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        app:layout_constraintVertical_bias="0.049" />

    <EditText
        android:id="@+id/etPassLogin"
        android:layout_width="308dp"
        android:layout_height="48dp"
        android:autofillHints="@string/pass"
        android:background="@drawable/box"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsername"
        app:layout_constraintVertical_bias="0.072" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:background="@drawable/box"
        android:text="@string/registerbbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassLogin"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="308dp"
        android:layout_height="48dp"
        android:autofillHints="@string/name"
        android:background="@drawable/box"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.131" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/passRequirements"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassLogin"
        app:layout_constraintVertical_bias="0.002" />


</android.support.constraint.ConstraintLayout>