<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDEDED"
    tools:context=".Settings.ProfileFolder.ChangePasswordProfile">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top"
        android:gravity="center|end"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/ExitChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:gravity="center"
            android:text="X   "
            android:textColor="#FFFFFF"
            android:textSize="30sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/EntertTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/newPasswordMessage"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.111" />

    <EditText
        android:id="@+id/etCurrentPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="464dp"
        android:autofillHints=""
        android:background="@drawable/box"
        android:ems="10"
        android:hint="@string/CurrentPassword"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passRequirements2"
        app:layout_constraintVertical_bias="0.016" />

    <EditText
        android:id="@+id/etNewPasswordProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="424dp"
        android:autofillHints=""
        android:background="@drawable/box"
        android:ems="10"
        android:hint="@string/newPassword"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCurrentPassword"
        app:layout_constraintVertical_bias="0.016" />

    <EditText
        android:id="@+id/etConfirmNPasswordProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="360dp"
        android:autofillHints=""
        android:background="@drawable/box"
        android:ems="10"
        android:hint="@string/ConfirmNP"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNewPasswordProfile"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnSaveProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="264dp"
        android:background="@drawable/bg_btn_cal"
        android:text="@string/Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etConfirmNPasswordProfile"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/passRequirements2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="528dp"
        android:text="@string/passRequirements"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EntertTV"
        app:layout_constraintVertical_bias="0.008" />

</android.support.constraint.ConstraintLayout>